[gd_scene load_steps=13 format=2]

[ext_resource path="res://Menus/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/bg/bg2.jpg" type="Texture" id=2]
[ext_resource path="res://Menus/resources/dark_w.png" type="Texture" id=4]
[ext_resource path="res://Menus/resources/btn_texture2.png" type="Texture" id=5]
[ext_resource path="res://Menus/resources/Header_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://font_s28.tres" type="DynamicFont" id=8]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.596078, 0.305882, 0.305882, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.305882, 0.317647, 0.596078, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="DynamicFont" id=3]
size = 40
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0.658824 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.290196, 0.290196, 0.290196, 0.607843 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.028
anchor_top = 0.186
anchor_right = 0.335
anchor_bottom = 0.797
margin_left = 0.16
margin_top = 0.0800018
margin_right = 0.199982
margin_bottom = -29.84
rect_min_size = Vector2( 0, 30 )
rect_clip_content = true
size_flags_vertical = 0
custom_constants/separation = 35
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_right = 393.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 8 )
text = "New Game"

[node name="stats" type="TextureButton" parent="VBoxContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_top = 95.0
margin_right = 393.0
margin_bottom = 145.0
rect_min_size = Vector2( 0, 50 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/stats"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = -26.0
margin_right = 62.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
text = "Stats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="store" type="Button" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 393.0
margin_bottom = 155.0
rect_min_size = Vector2( 0, 60 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 8 )
text = "Loadout"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 190.0
margin_right = 393.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 60 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 8 )
text = "Options"

[node name="lev_edit" type="Button" parent="VBoxContainer"]
margin_top = 285.0
margin_right = 393.0
margin_bottom = 345.0
rect_min_size = Vector2( 0, 60 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 8 )
text = "Level Editor"

[node name="community" type="Button" parent="VBoxContainer"]
margin_top = 380.0
margin_right = 393.0
margin_bottom = 440.0
rect_min_size = Vector2( 0, 60 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 8 )
text = "Community"

[node name="Label" type="Label" parent="."]
anchor_left = 0.346
anchor_right = 0.654
anchor_bottom = 0.111
margin_left = 0.619995
margin_right = -0.620056
margin_bottom = 0.0799942
custom_fonts/font = ExtResource( 7 )
text = "WarZone II"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="extras" type="Button" parent="."]
anchor_left = 0.8
anchor_top = 0.858
anchor_right = 0.981
anchor_bottom = 0.95
margin_left = -0.0339355
margin_top = 0.229858
margin_right = 0.285889
margin_bottom = -0.0102539
grow_horizontal = 2
grow_vertical = 2
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 8 )
text = "EXTRAS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="g_version" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -65.9546
margin_top = 16.6364
margin_right = -18.9546
margin_bottom = 30.6364
text = "V 1.35"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -271.0
margin_top = -122.0
margin_right = 271.0
margin_bottom = 122.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="quitPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.135
margin_top = -87.4741
margin_right = 116.865
margin_bottom = -50.4741
custom_fonts/font = ExtResource( 8 )
text = "Quit Warzone 2 ?"

[node name="yes" type="Button" parent="quitPanel"]
anchor_left = 0.688
anchor_top = 0.668
anchor_right = 0.688
anchor_bottom = 0.668
margin_left = -49.896
margin_top = 1.008
margin_right = 49.104
margin_bottom = 44.008
custom_fonts/font = ExtResource( 8 )
text = "Yes"

[node name="no" type="Button" parent="quitPanel"]
anchor_left = 0.229
anchor_top = 0.76
anchor_right = 0.229
anchor_bottom = 0.76
margin_left = -49.618
margin_top = -21.44
margin_right = 49.382
margin_bottom = 21.56
custom_fonts/font = ExtResource( 8 )
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/stats" to="." method="_on_stats_pressed"]
[connection signal="pressed" from="VBoxContainer/store" to="." method="_on_store_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/lev_edit" to="." method="_on_lev_edit_pressed"]
[connection signal="pressed" from="VBoxContainer/community" to="." method="_on_community_pressed"]
[connection signal="pressed" from="extras" to="." method="_on_extras_pressed"]
[connection signal="pressed" from="quitPanel/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="quitPanel/no" to="." method="_on_no_pressed"]
